--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
-primaryColor="#b7afaf"
-backgroundColor="#d4b1b1"
+primaryColor="#441C65"
+backgroundColor="#F8E47E"
 secondaryBackgroundColor="#d7dce6"
 textColor="#262629"
 font="monospace"
