--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,5 +1,5 @@
 [theme]
-primaryColor="#441C65"
+primaryColor="#D2B4DE"
 backgroundColor="#F8E47E"
 secondaryBackgroundColor="#d7dce6"
 textColor="#262629"
