--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,7 +1,7 @@
 [theme]
 primaryColor="#D2B4DE"
 backgroundColor="#F8E47E"
-secondaryBackgroundColor="#d7dce6"
+secondaryBackgroundColor="#FADBD8"
 textColor="#262629"
 font="monospace"
 
